# MyMem

./: CMakeLists.txt  MemoryGame.spec  hafiza_oyunu.py  icon_b64.txt  mymem.py  mymem_v2.py
include/: game.h  mainwindow.h  scoremanager.h
src/: game.cpp  mainwindow.cpp  scoremanager.cpp
